resume controller and design for index page of application controller, added css and html

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,30 @@
+<%= stylesheet_link_tag 'home/intro', media: 'all', 'data-turbolinks-track': 'reload' %>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-L1Si5drHwJWqR3VYkYF9GuO9cBjSk8pMHbNN2J6ZSFZ74/SXJxtmqF9nCUg8axn4qkFWwaWJ+D9Rz++nYlqD9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <h1>Welcome to My Portfolio</h1>
-<p>Explore my projects and skills.</p>
+
+<div class="content-box">
+  <div class="intro-container">
+    <div class="intro">
+      <h2>Passionate</h2>
+      <p class="position">Data Scientist</p>
+      <p>Passionate about leveraging data to drive insights and solve complex problems.</p>
+    </div>
+    <button id="hire-btn">Hire Me</button>
+  </div>
+</div>
+
+<div class="image-container">
+  <%= image_tag("Madhav.jpg", alt: "Your Image") %>
+  <h2>Madhav Bhandari</h2>
+  <div class="social-icons">
+    <a href="#"><i class="fab fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="far fa-envelope"></i></a>
+  </div>
+</div>
+
+
+
+
