--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,8 @@
 <h1>About Me</h1>
 <p>This is where you can learn more about me.</p>
-
+<h3>My Projects:</h3>
+<ul>
+  <% @projects.each do |project| %>
+    <li><%= project.title %></li>
+  <% end %>
+</ul>
